[project]
name = "taming"
version = "0.1.0"
description = "Taming the Curse of Dimensionality: Quantitative Economics with Deep Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.2",
    "jsonargparse[all]>=4.39.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "ruff>=0.14.7",
    "scipy>=1.15.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
